--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+/* CSS Ainun */
+
 .card {
   border-radius: 8px;
   margin-left: 50px;
@@ -46,3 +48,5 @@
   margin-top: 3px;
   z-index: -1;
 }
+
+/* CSS Ainun */
