--- a/style.css
+++ b/style.css
@@ -1,3 +1,51 @@
+* {
+  margin: 0px;
+  padding: 0px;
+}
+
+/* css akbar */
+
+.akbarcard {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  width: 23%;
+  border-radius: 8px;
+  margin-left: 50px;
+  margin-top: 50px;
+}
+
+.akbarcard:hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+}
+
+.akbarcard img {
+  border-top-right-radius: 3px;
+  border-top-left-radius: 4px;
+}
+
+.akbarcontainer {
+  font-family: sans-serif;
+  padding: 10px 10px 10px 20px;
+}
+
+.akbarcontainer a {
+  text-decoration: none;
+  color: #0033ff;
+  font-weight: bold;
+  font-size: large;
+}
+
+.akbarcontainer p {
+  font-size: medium;
+  word-spacing: 4px;
+  padding-bottom: 20px;
+  color: rgba(66, 66, 66, 0.913);
+}
+
+.akbarcontainer h4 {
+  font-size: x-large;
+  color: rgba(58, 58, 58, 0.898);
+}
+
 /* CSS Ainun */
 
 .card {
@@ -5,7 +53,7 @@
   margin-left: 50px;
   margin-top: 50px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  width: 23%;
+  width: 435px;
 }
 
 .card:hover {
@@ -14,6 +62,7 @@
 
 .card img {
   width: 100%;
+  margin-bottom: 15px;
 }
 
 .card a {
@@ -30,23 +79,36 @@
 
 .detail {
   margin-left: 8px;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  font-family: Metropolis;
+}
+
+.detail h3 {
+  font-family: "Metropolis", sans-serif;
+  font-style: 16px;
+  font-weight: 600;
+  color: #1f2937;
 }
 
 .detail p {
   font-size: 12px;
-  font-family: Metropolis, sans-serif;
+  font-family: "Metropolis", sans-serif;
   letter-spacing: 0;
   color: #1f2937;
+  line-height: 18px;
 }
 
 .button {
   text-decoration: none;
-  margin-bottom: 5px;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  line-height: 16px;
 }
 
 .svg {
   margin-top: 3px;
-  z-index: -1;
 }
 
 /* CSS Ainun */
