--- a/style.css
+++ b/style.css
@@ -111,3 +111,91 @@
 }
 
 /* CSS Ainun */
+
+/* CSS AGUM */
+.container {
+  font-family: "Metropolis", sans-serif;
+  width: 365.5px;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  border: 0 solid #e5e7eb;
+  border-width: 1px;
+  font-size: 12px;
+  letter-spacing: 0;
+  color: #1f2937;
+  padding: 0;
+  background-color: #fff;
+}
+
+.container:hover {
+  box-shadow: 3px 8px 120px 1px rgba(0, 0, 0, 0.2);
+}
+
+.image {
+width: 364.167px;
+object-fit: cover;
+}
+
+.image img {
+  width: 100%;
+  height:auto
+}
+
+.gambar {
+  border-top-left-radius: 0.5rem;
+  border-top-right-radius: 0.5rem;
+  margin: auto;
+}
+
+.judul {
+  padding-top: 8px;
+  padding: 16px;
+  gap: 16px;
+  justify-content: space-between;
+  box-sizing: border-box;
+  border: 0 solid #e5e7eb;
+  font-size: 12px;
+  letter-spacing: 0;
+}
+
+.container-sub {
+  box-sizing: border-box;
+  border: 0 solid #e5e7eb;
+  display: block;
+  font-size: 12px;
+  letter-spacing: 0;
+  color: #1f2937;
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin: auto;
+}
+
+.sub-judul {
+  font-weight: 600;
+  font-size: 16px;
+  margin: 0;
+}
+
+.judul p {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  height: 36px;
+}
+
+.anchor a {
+  font-size: 12px;
+  letter-spacing: 0;
+  text-decoration: none;
+  margin-top: 25px;
+  margin-bottom: 15px;
+  color: blue;
+  font-weight: 600;
+  text-transform: capitalize;
+  display: flex;
+  align-items: center;
+  gap: 8px;  
+}
